# refraction

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs
src/app/: canvas.rs  mod.rs  simulation.rs
src/app/simulation/: field.rs  particle.rs  variables.rs  waveform.rs
