[package]
name = "refraction"
version = "0.1.0"
edition = "2024"
authors = ["Rowan Preston <rowan.t.preston@gmail.com>"]
include = ["LICENSE", "Cargo.toml", "README.md", "src/*.rs"]

[dependencies]
eframe = "0.31"
egui = "0.31.1"
log = { version = "0.4", features = ["std"] }
env_logger = "0.11.8"
ndarray = "0.16.1"
strum = "0.27.2"
strum_macros = "0.27.2"